--- a/css/styles.css
+++ b/css/styles.css
@@ -1365,6 +1365,7 @@ footer .socials .ico-3 {background-position:-100px 0;}
 	text-align:center;
 	background:#fff;
 	overflow:hidden;
+	display:none;
 }
 .popup .cols {
 	text-align:left;
