--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,6 @@ nav a {color:#22221e;}
 .test-form {
 	text-align:center;
 	color:#000026;
-	text-transform:uppercase;
 	font-size:13px;
 	line-height:16px;
 }
@@ -478,7 +477,7 @@ nav a {color:#22221e;}
 	padding:0;
 	border:0;
 	cursor:pointer;
-	background:#8D8D8D;
+	background:#00d326;
 	width:100%;
 	height:30px;
 	color:#fff;
@@ -487,28 +486,8 @@ nav a {color:#22221e;}
 	text-align:center;
 	box-shadow: inset 0 0 0 1px #fff;
 }
-.btn-chat:hover {background:#979797; text-decoration:none;}
-.btn-chat:active {background:#A3A2A2;}
-
-.btn-speedreport {
-	display:block;
-	margin:0 auto;
-	padding:0;
-	border:0;
-	cursor:pointer;
-	background:#ff7012;
-	width:100%;
-	height:30px;
-	color:#fff;
-	text-transform:uppercase;
-	font:13px/30px 'OpenSansBold';
-	text-align:center;
-	box-shadow: inset 0 0 0 1px #fff;
-	margin-bottom: 4px;
-}
-.btn-speedreport:hover {background:#ff9300;text-decoration:none;}
-.btn-speedreport:active {background:#ffbc00;}
-.btn-speedreport.inactive {background:#33332f !important;}
+.btn-chat:hover {background:#00C223; text-decoration:none;}
+.btn-chat:active {background:#00B120;}
 
 /* testimonial */
 .testimonial {
@@ -1150,7 +1129,6 @@ nav a {color:#22221e;}
 	clear:both;
 	width:100%;
 	padding:0 0 3px;
-	text-transform:uppercase;
 	font-size:11px;
 	line-height:14px;
 }
@@ -1563,6 +1541,24 @@ html.mobile-device .orange-slider, html.no-csstransforms .orange-slider, html.lt
 	border: 1px solid #E9E9E9;
 	margin-bottom: 28px;
 	display: none;
+	transition: all 0.5s ease;
+}
+.price-section .bw-tier-notice p { height: 72px; }
+.price-section .bw-tier-notice:hover {
+	background: #e4e4de;
+}
+.price-section .bw-tier-notice:hover p.first { display: none; }
+.price-section .bw-tier-notice:hover p.second {
+	display: block;
+}
+.price-section .bw-tier-notice:hover p.second span {
+	font-size: 1.4em;
+	margin-bottom: 10px;
+}
+.price-section .bw-tier-notice:hover p.second a {
+	font-size: 1.2em;
+	margin-top: 10px;
+	padding: 6px 16px;
 }
 
 /* ==========================================================================
@@ -1692,7 +1688,10 @@ Forms for slider
 .sidebar-phone {
 	font-size: 13px;
 	line-height: 1.45em;
-	margin-top: 4px;
+	background: #fff;
+	padding: 4px;
+	border: 2px solid #f3f3f0;
+	border-top: 0;
 }
 .sidebar-phone strong {
 	font-family: 'OpenSansBold';
@@ -1789,7 +1788,7 @@ input.button:active { top: 1px; position: relative;  }
 Color Styles
 ========================================================================== */
 /*text*/
-.orange-text { color: #FF6F11; }
+.orange-text { color: #ff4c0a; }
 .grey-text { color: #CCC; }
 
 /* ==========================================================================
