--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ nav a {color:#22221e;}
 	padding:0;
 	border:0;
 	cursor:pointer;
-	background:#00d326;
+	background:#27ae00;
 	width:100%;
 	height:30px;
 	color:#fff;
@@ -778,11 +778,21 @@ nav a {color:#22221e;}
 	color:#7d7d7a;
 }
 .data table {
-	width:100%;
+	width:500px;
 	border-collapse:collapse;
 	text-align:left;
 	position:relative;
 	z-index:20;
+	margin: 0 auto;
+}
+span.decor-topheader {
+	width: 500px;
+	height: 130px;
+	background: transparent;
+	box-shadow: 0 0 94px -5px rgba(255, 245, 0, 1);
+	position: absolute;
+	left: 609px;
+	top: 37px;
 }
 .data td,
 .data th {
@@ -800,38 +810,26 @@ nav a {color:#22221e;}
 	font-family:'OpenSansBold';
 	color:#21211d;
 }
-.data thead th:first-child {
-	font-family:'OpenSansItalic';
+.data thead th {
 	background:none;
+	text-align: center;
 }
 .data tbody th {
 	color:#fff;
-	background:#ff7e2a;
+	background:#ff7e29;
 	font-weight:normal;
 }
-.data tbody td {font-family:'OpenSansBold';}
-.data .odd th {background:#ff7012;}
+.data tbody td {
+	text-align: center;
+	color: #666662;
+}
+.data tbody td a {
+	color: #666662;
+	text-decoration: underline;
+}
+.data tbody td strong { font-family:'OpenSansBold'; }
+.data .odd th {background:#ff6f12;}
 .data .odd td {background:#f4f4f1;}
-.data .decor-r,
-.data .decor-b {
-	text-indent:-9999px;
-	overflow:hidden;
-	text-align:left;
-	position:absolute;
-	right:0;
-	bottom:0;
-	-webkit-box-shadow:0 0 8px 0 #d9d9d9;
-	   -moz-box-shadow:0 0 8px 0 #d9d9d9;
-	        box-shadow:0 0 8px 0 #d9d9d9;
-}
-.data .decor-r {
-	top:0;
-	left:210px;
-}
-.data .decor-b {
-	left:0;
-	top:37px;
-}
 /* img-block */
 .img-block {padding:12px 0 43px;}
 .img-block img {vertical-align:top;}
@@ -840,7 +838,6 @@ nav a {color:#22221e;}
 .price-block {
 	margin:0 auto;
 	padding:38px 100px 0;
-	width:680px;
 	text-align:center;
 	background:url(../images/bg-price-block.png) no-repeat 50% 25px;
 	min-height:297px;
@@ -848,6 +845,10 @@ nav a {color:#22221e;}
 .price-block h1 {
 	font:64px/67px 'OpenSansLight';
 	margin:0 0 4px;
+}
+.price-block p {
+	color: #000;
+	font-size: 1.3em;
 }
 .price-block .data {
 	margin-bottom:0;
@@ -860,7 +861,11 @@ nav a {color:#22221e;}
 	padding:14px 0 0;
 	text-align:center;
 }
-.info p {margin-bottom:30px;}
+.info p {margin-bottom:30px; }
+section.info.small  {
+	font-size:.82em;
+	margin-top: 29px;
+}
 .ask-form {
 	text-align:left;
 	margin:0 -73px 0 0;
@@ -1129,7 +1134,7 @@ nav a {color:#22221e;}
 	clear:both;
 	width:100%;
 	padding:0 0 3px;
-	font-size:11px;
+	font-size:13px;
 	line-height:14px;
 }
 .trial-form .text,
@@ -1168,6 +1173,11 @@ nav a {color:#22221e;}
 	clear:both;
 	margin:0 0 13px;
 }
+.popup .trial-form .select-area,
+.popup .feedback-form .select-area {
+	background: #fff;
+	border: 1px solid #cdcdc7;
+}
 .feedback-form .text,
 .feedback-form textarea {width:324px;}
 .feedback-form select,
@@ -1186,6 +1196,9 @@ nav a {color:#22221e;}
 .simple-list li {
 	padding:0 0 10px 24px;
 	background:url(../images/bul-01.png) no-repeat 0 8px;
+}
+.simple-list.green li {
+	background:url(../images/bul-02.png) no-repeat 0 15px;
 }
 .simple-list li strong {
 	font-family: "OpenSansBold";
@@ -1337,7 +1350,11 @@ footer .socials .ico-3 {background-position:-100px 0;}
 	padding:0 24px;
 }
 .popup .trial-form .text,
-.popup .trial-form textarea {width:294px;}
+.popup .trial-form textarea {
+	width:294px;
+	border: 1px solid #cdcdc7;
+	background: #fff;
+}
 .popup .trial-form select,
 .popup .trial-form .select-area {width:312px !important;}
 .popup h3 {
@@ -1749,7 +1766,6 @@ Forms for slider
 }
 
 .footer-freetrial .trial-form { margin: 0; }
-
 
 /* ==========================================================================
 Buttons
